# tksearchengine

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: release.yml  tests.yml
examples/: communes.py
src/tksearchengine/: __init__.py  search_engine.py
tests/: __init__.py  test_search_engine.py
