[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "tksearchengine"
version = "1.0.1"
description = "A reusable Tkinter search widget with fuzzy multi-word matching"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "WhatIsMyRealName" }]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: User Interfaces",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
tksearchengine = ["py.typed"]
